[package]
name = "sculptor-derive"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/runner.rs"

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
sculptor = { path = "../sculptor/" }

[dev-dependencies]
trybuild = "1.0.74"
sculptor = { path = "../sculptor/", features = ["mocks"]}
